// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User (e2e) Unexpected usage Mall-formed Input should not create a user 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 26,
        "line": 1,
      },
    ],
    "message": "Variable \\"$input\\" got invalid value {}; Field \\"email\\" of required type \\"String!\\" was not provided.",
  },
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 26,
        "line": 1,
      },
    ],
    "message": "Variable \\"$input\\" got invalid value {}; Field \\"password\\" of required type \\"String!\\" was not provided.",
  },
]
`;

exports[`User (e2e) Unexpected usage Mall-formed Input should not delete a user 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 26,
        "line": 1,
      },
    ],
    "message": "Variable \\"$userId\\" of required type \\"String!\\" was not provided.",
  },
]
`;

exports[`User (e2e) Unexpected usage Mall-formed Input should not find a user 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 17,
        "line": 1,
      },
    ],
    "message": "Variable \\"$userId\\" of required type \\"String!\\" was not provided.",
  },
]
`;

exports[`User (e2e) Unexpected usage Mall-formed Input should not update a user 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 26,
        "line": 1,
      },
    ],
    "message": "Variable \\"$userId\\" of required type \\"String!\\" was not provided.",
  },
]
`;
